etc/openshift/worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  selector: 
    matchLabels: 
      app: worker
  template:
    metadata: 
      labels: 
        app: worker
    spec:
      containers: 
        -
          image: openshiftacademiaonline/dockercoins-ops:worker-latest
          name: python
