etc/openshift/webui-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: webui-svc
spec: 
  ports: 
    -
      port: 80
      targetPort: 8080
  selector:
    app: webui
